# ai-interview-coach

./: .gitignore  README.md  pyproject.toml  run.py
interview_coach/: agent.py  agent_utils.py  config.py  custom_agents.py  tools.py
interview_coach/sub_agents/: __init__.py  critic_agent.py  dossier_agent.py  interview_agent.py  questions_agent.py
